
GUIDERPLAY: Wrapper for IDL guider to simply allow play-back of images
      for a specified night.
PLUGHISTORY: Plot out to fiber #1000 for BOSS cartridges.

-------------------------------------------------------------------------------
v5_4_12 (May 31, 2010) idlspec2d
Tag for new S/N fits for SOS, and revert to SDSS-I templates in Spectro-2D.
Built against specflat v1_11, elodie v1_3, idlutils v5_4_13.

APOALL,SLITHISTORY,SPECDB_CREATE,SPPLAN2D: Change references to
      the now-defunct $ASTROLOG_DIR directory to $SPECLOG_DIR.
BOLTON_SN_FIT: new low-level routine for (hopefully) robust
      estimation of exposure SN.
FITSN: Another major change to how the S/N lines are fit.  Force the fit
      to be a line with a fixed slope (as specified in opSNlimits.par),
      and choose the offset such that half the points are below and half
      above in the fitting magnitude range.  Call this a "median line."
      This addresses ticket #754, but really continues ticket #750.
PLATE_SPEC_IMAGE: Smoothly die if zans is missing.
PLOTSN: Sort the points randomly, such that not all the spec2 points
      are plotted on top of the spec1 points, and make the points smaller.
PLUG2TSOBJ: Read photoPosPlate files instead of photoPlate files.
      This addresses ticke #809.
QUICKWAVE: Always generate the fiber-flat vectors for the corresponding
      flat-field image, even if that fiber-flat already exists.  If it
      exists, it gets over-written.  This is confusing behaviour, and
      might do bad things in some cases, but addresses ticket #831.
SDREPORTMAKE: Remove this now-unused piece of code.
SPCOADD_V5: Delete QUALITY,REQTIME keywords (ticket #789).
SPREDUCE1D: Back out last change to use Bolton's new spMLpca templates
      and change the default of chop_data back.
TRACE_SPARSE_CRUDE: New semi-crude, semi-robust sparse flat tracing routine.

opfiles/opSNlimits.par: Changes to be consistent with FITSN.  Remove